--- a/pepper_deep_cat/index.html
+++ b/pepper_deep_cat/index.html
@@ -23,7 +23,7 @@
           <input type="text" data-bind="value: $root.imageUrl" />
         </div>
         <div>
-          <button data-bind="click: $root.classifier">識別！</button>
+          <button data-bind="click: $root.classifierUrl">識別！</button>
         </div>
         <div data-bind="text:$root.result">
         </div>
