--- a/pepper_tweet_cat/index.html
+++ b/pepper_tweet_cat/index.html
@@ -43,6 +43,10 @@
       </div>
     </div>
     
+    <div>
+        <div data-bind="html:$root.caffeData"></div>
+    </div>
+
     <video class="webcamVideo" id="video"></video>
     <canvas class="webcamCanvasLayer" width="1" height="1"></canvas>
 
